tests/exploratory/errors/test_nil_nonpointer.sn
# Exploratory test: nil can only be assigned to pointer types
# This should fail to compile because nil is not valid for primitives.

fn main(): int =>
    # ERROR: nil can only be used with pointer types
    var x: int = nil
    return 0
